--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,6 +7,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.result.Result">
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button4" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout9"
@@ -127,6 +136,7 @@
                 android:text="0/100" />
 
             <TextView
+                  android:id="@+id/regenerateTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
