--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -69,13 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8">
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Date"
-            android:textSize="15dp" />
+
 
         <TextView
             android:id="@+id/time"
@@ -100,6 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
         <EditText
+            android:id="@+id/edittext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="5dp"
