--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -2,11 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#E91E63"
     android:layout_height="match_parent"
     tools:context=".ui.preview.TextFragment">
 
     <TextView
+        android:id="@+id/summarizeTxt"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="@color/black"
