--- a/app/src/main/res/layout/activity_text_scanner_translate.xml
+++ b/app/src/main/res/layout/activity_text_scanner_translate.xml
@@ -113,6 +113,7 @@
             </androidx.cardview.widget.CardView>
 
             <Button
+                android:id="@+id/summarizeBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Summarize"
