--- a/app/src/main/res/layout/activity_text_scanner_translate.xml
+++ b/app/src/main/res/layout/activity_text_scanner_translate.xml
@@ -76,7 +76,7 @@
                     android:text="text" />
             </androidx.cardview.widget.CardView>
 
-            <EditText
+            <!--<EditText
                 android:id="@+id/languageCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,7 +86,23 @@
                 android:padding="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="language name " />
+                android:text="language name " />-->
+
+            <Spinner
+                android:id="@+id/languageSpinner"
+                android:layout_width="match_parent"
+                android:background="@drawable/roundcorner"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="15dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp" />
+
+
+
+
+
+
 
 
             <androidx.cardview.widget.CardView
