--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -180,7 +180,7 @@
                 android:layout_marginEnd="164dp"
                 android:paddingHorizontal="30dp"
                 android:background="@drawable/custom_button"
-                android:backgroundTint="#7E7777"
+                android:backgroundTint="@color/color_third"
                 android:textStyle="bold"
                 android:textAllCaps="false"
                 android:text="Mind mapping" />
