--- a/app/src/main/res/layout/activity_text_editor2.xml
+++ b/app/src/main/res/layout/activity_text_editor2.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.texteditor.TextEditor">
+    tools:context=".ui.texteditor2.TextEditor2">
+
 
 
     <RelativeLayout
@@ -100,23 +101,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
-        <com.github.irshulx.Editor
-            android:id="@+id/editor"
+        <jp.wasabeef.richeditor.RichEditor
+            android:id="@+id/editor2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="-4dp"
-            android:maxLines="2147483647"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:placeholder="Start writing here..."
-            app:render_type="Editor">
-
-        </com.github.irshulx.Editor>
+            android:layout_height="match_parent" />
     </ScrollView>
 
     <LinearLayout
@@ -135,7 +123,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"
             android:visibility="gone"
-           > <!-- initially set visibility to gone -->
+            > <!-- initially set visibility to gone -->
 
             <!-- Content inside the ScrollView -->
             <LinearLayout
@@ -209,42 +197,42 @@
 
             </LinearLayout>
         </HorizontalScrollView>
-    <HorizontalScrollView
-        android:id="@+id/scrollView_heading"
-        android:layout_width="match_parent"
-        android:background="#FFC107"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"> <!-- initially set visibility to gone -->
-
-        <!-- Content inside the ScrollView -->
-        <LinearLayout
+        <HorizontalScrollView
+            android:id="@+id/scrollView_heading"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="#FFC107"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            android:visibility="gone"> <!-- initially set visibility to gone -->
 
-            <ImageView
-                android:id="@+id/action_h1"
-                android:layout_width="30dp"
-                android:layout_height="40dp"
-                android:background="@drawable/heading_1_svgrepo_com" />
+            <!-- Content inside the ScrollView -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/action_h2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/heading_2_svgrepo_com" />
+                <ImageView
+                    android:id="@+id/action_h1"
+                    android:layout_width="30dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/heading_1_svgrepo_com" />
 
-            <ImageView
-                android:id="@+id/action_h3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/heading_3_svgrepo_com" />
+                <ImageView
+                    android:id="@+id/action_h2"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/heading_2_svgrepo_com" />
 
-        </LinearLayout>
-    </HorizontalScrollView>
+                <ImageView
+                    android:id="@+id/action_h3"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/heading_3_svgrepo_com" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
 
 
         <HorizontalScrollView
@@ -253,7 +241,7 @@
             android:background="#FFC107"
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"
-           android:visibility="gone"> <!-- initially set visibility to gone -->
+            android:visibility="gone"> <!-- initially set visibility to gone -->
 
             <!-- Content inside the ScrollView -->
             <LinearLayout
@@ -352,7 +340,7 @@
                     android:background="@drawable/link_1107_svgrepo_com" />
 
                 <ImageView
-                    android:id="@+id/action_insert_image"
+                    android:id="@+id/action_insert_image2"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="10dp"
@@ -373,7 +361,7 @@
                     android:background="@drawable/eraser" />
 
                 <ImageView
-                    android:id="@+id/action_newline"
+                    android:id="@+id/action_newline2"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="10dp"
@@ -385,15 +373,5 @@
 
 
     </LinearLayout>
-    <!--<ImageView
-        android:id="@+id/action_h1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editor" />     -->
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
