--- a/app/src/main/res/layout/activity_upload_signature.xml
+++ b/app/src/main/res/layout/activity_upload_signature.xml
@@ -14,7 +14,7 @@
         tools:context=".ui.uploadSignature.UploadSignature">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
+            android:id="@+id/upSignatureCL"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginHorizontal="20dp"
@@ -56,7 +56,7 @@
             android:layout_margin="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/upSignatureCL" />
 
         <LinearLayout
             android:layout_width="match_parent"
