--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -38,7 +38,7 @@
         </RelativeLayout>
 
         <ImageView
-            android:id="@+id/imageView12"
+            android:id="@+id/cameraIV"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/scan"
@@ -54,7 +54,7 @@
             android:src="@drawable/impo"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView12"
+            app:layout_constraintStart_toEndOf="@+id/cameraIV"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />
 
         <ImageView
@@ -64,7 +64,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+            app:layout_constraintTop_toBottomOf="@+id/cameraIV" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
